[tool.poetry]
name = "graduation-research"
version = "0.1.0"
description = ""
authors = ["Yuki Uehara"]

packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
xgboost = "^1.6.0"
catboost = "^1.0.5"
psutil = "^5.9.0"
ds-util = {git = "https://github.com/kiccho1101/ds-util.git"}
Unidecode = "^1.3.4"
wandb = "^0.12.16"
tqdm = "^4.64.0"
pandas = "^1.4.4"
argtyped = "^0.4.0"
tabulate = "^0.8.10"
lightgbm = "^3.3.3"
scikit-uplift = "^0.5.1"
pulp = "^2.6.0"
seaborn = "^0.12.0"
cvxpy = "1.2.2"
japanize-matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.4.0"
nb-black = "^1.0.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
